syntax = "proto3";

package protodoc;

service ProtoDoc {
    // 把 proto3 定义的协议转换成文档
    rpc Convert(ConvertReq) returns (ConvertRes);
}

message ConvertReq {
    // proto3 定义的协议内容
    string proto = 1;
    // 协议文件名，用于解析时的附加信息
    string filename = 2;
}

message ConvertRes {
    // HTML 格式的文档
    string html = 2;
}

service Hello {
    // 用于性能测试
    rpc Hello(HelloReq) returns (HelloRes);
}

message HelloReq {
}

message HelloRes {
    string data = 1;
}
